// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu does not throw errors when data is not passed 1`] = `
<div>
  <nav>
    <a
      class="link"
      href="/"
    >
      <span
        class="linkInner"
      >
        Clients
      </span>
    </a>
    <div
      class="clientWrap"
    />
    <a
      class="link"
      href="/about"
    >
      <span
        class="linkInner"
      >
        About
      </span>
    </a>
    <a
      class="link"
      href="mailto:jonasvail@gmail.com?Subject=Hoi%20Hoi%20Hello!"
    >
      <span
        class="linkInner"
      >
        Contact
      </span>
    </a>
  </nav>
</div>
`;

exports[`Menu renders the list correctly 1`] = `
<div>
  <nav>
    <a
      class="link"
      href="/"
    >
      <span
        class="linkInner"
      >
        Clients
      </span>
    </a>
    <div
      class="clientWrap"
    >
      <a
        class="link"
        href="/twitch-creators-campaign"
      >
        <span
          class="linkInner"
        >
          Twitch
        </span>
      </a>
      <a
        class="link"
        href="/adidas-futurecraft-loop"
      >
        <span
          class="linkInner"
        >
          adidas
        </span>
      </a>
      <a
        class="link"
        href="/?client=PlayStation"
      >
        <span
          class="linkInner"
        >
          PlayStation
        </span>
      </a>
      <a
        class="link"
        href="/al-jazeera-demandpressfreedom"
      >
        <span
          class="linkInner"
        >
          Al Jazeera
        </span>
      </a>
      <a
        class="link"
        href="/?client=HP"
      >
        <span
          class="linkInner"
        >
          HP
        </span>
      </a>
      <a
        class="link"
        href="/ketel-one-do-one-thing-well"
      >
        <span
          class="linkInner"
        >
          Ketel One
        </span>
      </a>
      <a
        class="link"
        href="/lilly-diabetes-uk"
      >
        <span
          class="linkInner"
        >
          Lilly
        </span>
      </a>
      <a
        class="link"
        href="/?client=EA%20Sports"
      >
        <span
          class="linkInner"
        >
          EA Sports
        </span>
      </a>
      <a
        class="link"
        href="/dr-martens-freedm"
      >
        <span
          class="linkInner"
        >
          Dr. Martens
        </span>
      </a>
      <a
        class="link"
        href="/sega-dreamcast-its-thinking"
      >
        <span
          class="linkInner"
        >
          Sega
        </span>
      </a>
      <a
        class="link"
        href="/mtv"
      >
        <span
          class="linkInner"
        >
          MTV
        </span>
      </a>
    </div>
    <a
      class="link"
      href="/about"
    >
      <span
        class="linkInner"
      >
        About
      </span>
    </a>
    <a
      class="link"
      href="mailto:jonasvail@gmail.com?Subject=Hoi%20Hoi%20Hello!"
    >
      <span
        class="linkInner"
      >
        Contact
      </span>
    </a>
  </nav>
</div>
`;
